Fixing bottom text spacing on mobile

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h3{
   .font-orange {
     color: #ff9900;
     font-size: 37px;
-    margin-top: 80%;
+    margin-top: 70%;
   }
 
   #underline {
